--- a/src/view/Login.form
+++ b/src/view/Login.form
@@ -28,6 +28,7 @@
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                      <Component id="txtLogin" min="-2" pref="123" max="-2" attributes="0"/>
                       <Component id="btnLogin" min="-2" pref="123" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="txtExit" pref="117" max="32767" attributes="0"/>
